sign up is back. added a message before customer buy a coupon. deleted CLR2 and CLR3. now all of them in CLR1.